# berkeley-softfloat-3

./: .gitignore  CMakeLists.txt  COPYING.txt  README.html  README.md  README.txt  meson.build  sbom.cdx.json
doc/: SoftFloat-history.html  SoftFloat-source.html  SoftFloat.html
source/: CMakeLists.txt  bf16_to_f32.c  extF80M_add.c  extF80M_div.c  extF80M_eq.c  extF80M_eq_signaling.c  extF80M_le.c  extF80M_le_quiet.c  extF80M_lt.c  extF80M_lt_quiet.c  extF80M_mul.c  extF80M_rem.c  extF80M_roundToInt.c  extF80M_sqrt.c  extF80M_sub.c  extF80M_to_f128M.c  extF80M_to_f16.c  extF80M_to_f32.c  extF80M_to_f64.c  extF80M_to_i32.c  extF80M_to_i32_r_minMag.c  extF80M_to_i64.c  extF80M_to_i64_r_minMag.c  extF80M_to_ui32.c  extF80M_to_ui32_r_minMag.c  extF80M_to_ui64.c  extF80M_to_ui64_r_minMag.c  extF80_add.c  extF80_div.c  extF80_eq.c  extF80_eq_signaling.c  extF80_isSignalingNaN.c  extF80_le.c  extF80_le_quiet.c  extF80_lt.c  extF80_lt_quiet.c  extF80_mul.c  extF80_rem.c  extF80_roundToInt.c  extF80_sqrt.c  (+300 more)
source/8086-SSE/: f128M_isSignalingNaN.c  s_bf16UIToCommonNaN.c  s_commonNaNToBF16UI.c  s_commonNaNToExtF80M.c  s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF16UI.c  s_commonNaNToF32UI.c  (+16 more)
source/RISCV/: CMakeLists.txt  extF80M_isSignalingNaN.c  s_commonNaNToExtF80M.c  s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_propagateNaNExtF80M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c  specialize.h
(+59 files in other folders)
